[package]
name = "gitolfs3-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
aws-config = "1.6"
aws-sdk-s3 = "1.82"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
gitolfs3-common = { path = "../gitolfs3-common" }
mime = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.44", features = ["full"] }
tokio-util = "0.7"
tower = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
