[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
aws-creds = "0.34"
chrono = { version = "0.4", features = ["serde"] }
common = { path = "../common" }
mime = "0.3"
rust-s3 = "0.33"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tower-service = "0.3"
