[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.2" }
aws-sdk-s3 = "1.12.0"
axum = "0.7"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
common = { path = "../common" }
mime = "0.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
tower = "0.4"
